2016-06-24 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m (_update)
	If value of a field is empty, consider it NULL and issue a fieldToNull

2016-06-13 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
        * DBSObject.m
        Implement storeValuesForFields to update several fields of a single object.

2016-06-13 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
        * DBSoap.m
        Bump API version to 37 and increase SOQL size limit 9000->18000 retaining some safety compared to 20000.

2016-05-27 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_login)
        Actually read passwordExpired!

2016-04-27 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Detect count() in query and complete progress.

2016-04-19 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	* DBSoap.h
	Getters for batch size.

	* DBSoapCSV.m
	Copy batch size when cloning DBSoap instance.

2016-04-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_create)
        Handle multiple errors more gracefully.

2016-04-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_update)
        Handle multiple errors more gracefully.

2016-03-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Fix correct result return type from query for insert and delete.

2016-02-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Look for ( when looking for aggregate operators only before from, ignoring thus IN(...)

2016-02-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Look for 'LIMIT ' including space to reduce risk of matching a field.

2015-11-23 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (fieldsByParsingQuery)
	Detect nested query and return unsupported exception.

2015-11-19 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Mark first batch run as done only when it actually did run (object conut > 0)

2015-10-20 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	DBCSVLineBreakHandling : filter line breaks in strings

2015-09-12 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (queryMore)